--- a/durganewsproject/templates/newsapp/index.html
+++ b/durganewsproject/templates/newsapp/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container" align='center'>
     <div class="jumbotron">
-         <h1>WELCOME TO XEINEX NEWS CHANNEL</h1>
+         <h1>WELCOME TO PRAVAS NEWS CHANNEL</h1>
          <h1 class="display-4">Hello, world!</h1>
          <p class="lead">For more Information login to xxx.com </p>
          <hr class="my-4">
